# dx12

./: .gitignore  CMakeLists.txt  LICENSE  README.md
projects/: CMakeLists.txt
projects/basic_window/: CMakeLists.txt  basic_window.cpp
projects/blending/: CMakeLists.txt  CMakeLists.txt~  blending.cpp  blending.cpp~
projects/blending/shaders/: blending.hlsl
projects/common/: BaseApp.cpp  BaseApp.h  BaseTimer.cpp  BaseTimer.h  BaseUtil.h  GeometryGenerator.cpp  GeometryGenerator.h  MathHelper.h  UploadBuffer.h
projects/compute_add/: CMakeLists.txt  compute_add.cpp
projects/compute_add/shaders/: computeAdd.hlsl
projects/compute_shader/: CMakeLists.txt  compute_shader.cpp
projects/compute_shader/shaders/: blur.hlsl
projects/cube_mapping/: CMakeLists.txt  CubeMapping.cpp
projects/cube_mapping/shaders/: simpleRender.hlsl  simpleRenderSky.hlsl
projects/d3d_initialization/: CMakeLists.txt  d3d_initialization.cpp
projects/draw_box/: CMakeLists.txt  drawBox.cpp
projects/draw_box/shaders/: color_vs.asm  color_vs.cso
projects/dynamic_indexing/: CMakeLists.txt  DynamicIndexing.cpp
projects/dynamic_indexing/shaders/: simpleRender.hlsl
projects/first_person_cam/: CMakeLists.txt  FirstPersonCam.cpp
projects/geometry_shader/: CMakeLists.txt  geometry_shader.cpp
projects/geometry_shader/shaders/: pointToQuad.hlsl  stenciling.hlsl
projects/hello_world/: CMakeLists.txt
projects/instancing_culling/: CMakeLists.txt  InstancingCulling.cpp
projects/instancing_culling/shaders/: simpleRender.hlsl
projects/picking/: CMakeLists.txt  Camera.cpp  Picking.cpp
projects/shapes/: CMakeLists.txt  FrameResource.cpp  FrameResource.h  shapes.cpp
projects/shapes_shaded/: CMakeLists.txt  FrameResource.cpp  FrameResource.h  shapes_shaded.cpp
projects/shapes_shaded/shaders/: color.hlsl
projects/stenciling/: CMakeLists.txt  stenciling.cpp
projects/stenciling/shaders/: stenciling.hlsl
projects/texturing/: CMakeLists.txt  FrameResource.cpp  FrameResource.h  texturing.cpp
projects/texturing/shaders/: textureDemo.hlsl
